# licitra-sentry

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  _final_docs_fix.py  content_rules.yaml  demo_swarm.py  demo_ticket_execution.py  demo_witness.py  pyproject.toml  requirements.txt
app/: __init__.py  anchor.py  audit_bridge.py  authority.py  content_inspector.py  contract.py  identity.py  key_manager.py  middleware.py  orchestration.py  orchestrator.py  ticket.py  tool_proxy.py  version.py  witness.py
experiments/: _common.py  benchmark_results.json  benchmark_suite.py  run_all_experiments.py  run_exp01_happy_path.py  run_exp02_contract_rejection.py  run_exp03_identity_expiry.py  run_exp04_relay_injection.py  run_exp05_pii_exfiltration.py  run_exp06_unauthorized_delegation.py  run_exp07_e2e_mmr_proof.py  run_exp08_ticket_replay.py  run_exp09_payload_tampering.py  run_exp10_audit_tampering.py
experiments/evidence/exp07_e2e_mmr_proof/: evidence.json  experiment_output.json
paper/: LICITRA_SENTRY_TR-2026-02_v0.1.tex  licitra_sentry_TR-2026-02_v0.1_FINAL.tex
scripts/: build_evidence_manifest.py  evidence.py  run_all.py
tests/: _common.ps1  _py_t01.py  _py_t02.py  _py_t03.py  _py_t06.py  run_all_tests.ps1  t01_identity.ps1  t02_contract.ps1  t05_middleware.ps1  t06_audit_bridge.ps1  t07_swarm_scenarios.ps1  test_sentry_v02.py  test_witness.py
tests/legacy/: _py_t04.py  _py_t05.py  _py_t07.py  _py_t08.py  _py_t09.py  t03_authority.ps1  t04_content_inspector.ps1  t08_determinism.ps1  t09_owasp_coverage.ps1
